# energy_simulation

./: data.csv  pyproject.toml
energy_simulation/: lcoe.py
tests/: test_lcoe.py
