[tool.poetry]
name = "energy-simulation"
version = "0.1.0"
description = ""
authors = ["Adam Ksiezyk <adam.ksiezyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyomo = "^6.7.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
plotly = "^5.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ipykernel = "^6.29.3"
nbformat = "^5.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
